--- a/HCE_APP/app/src/main/res/layout/activity_register_card.xml
+++ b/HCE_APP/app/src/main/res/layout/activity_register_card.xml
@@ -1,73 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/main"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".MainActivity">
+    android:id="@+id/registercard"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <!-- Credit Card Number -->
     <EditText
-        android:id="@+id/editTextCardNumber"
+        android:id="@+id/editTextCreditNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Card Number"
+        android:hint="Credit Card Number"
         android:inputType="number"
         android:maxLength="19"
-        android:maxLines="1"
-        android:layout_marginBottom="16dp"/>
+        android:importantForAccessibility="yes"/>
 
-    <!-- Owner Name -->
     <EditText
-        android:id="@+id/editTextOwnerName"
+        android:id="@+id/editTextOwner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Owner's Name"
-        android:maxLines="1"
-        android:layout_below="@id/editTextCardNumber"
-        android:layout_marginBottom="16dp"/>
+        android:hint="Owner Name"
+        android:inputType="textPersonName"
+        android:importantForAccessibility="yes"/>
 
-    <!-- Expiration Date -->
-    <RelativeLayout
-        android:id="@+id/expirationDateLayout"
+    <EditText
+        android:id="@+id/editTextCVV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editTextOwnerName"
-        android:layout_marginBottom="16dp">
+        android:hint="CVV"
+        android:inputType="number"
+        android:maxLength="3"
+        android:importantForAccessibility="yes"/>
 
-        <EditText
-            android:id="@+id/editTextExpirationDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:hint="Expiration Date (MM/YY)"
-            android:inputType="number"
-            android:maxLength="5"
-            android:maxLines="1" />
-
-        <EditText
-            android:id="@+id/editTextCVV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="CVV"
-            android:inputType="numberPassword"
-            android:maxLength="3"
-            android:maxLines="1"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"/>
-    </RelativeLayout>
-
+    <EditText
+        android:id="@+id/editTextExpiration"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Expiration Date (MM/YY)"
+        android:inputType="date"
+        android:maxLength="5"
+        android:importantForAccessibility="yes"/>
 
     <Button
-        android:id="@+id/buttonRegister"
-        android:layout_width="wrap_content"
+        android:id="@+id/buttonSubmit"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/expirationDateLayout"
-        android:layout_alignParentEnd="true"
-        android:backgroundTint="#A141AF"
-        android:text="Register"
-        android:textColorLink="#A141AF"
-        android:textStyle="bold" />
-</RelativeLayout>
+        android:text="Submit"
+        android:importantForAccessibility="yes"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="91dp"
+        android:layout_height="105dp"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        tools:visibility="gone" />
+</LinearLayout>
